# Image-classifier-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
apps/web/e2e/: demo.spec.ts
apps/web/scripts/: sync-model.mjs
apps/web/src/: App.tsx  frameBudget.test.ts  frameBudget.ts  inference.test.ts  inference.ts  model.test.ts  model.ts  parity.test.ts  preprocess.test.ts  preprocess.ts  styles.css
apps/web/src/components/: DrawingBoard.tsx  NetworkDiagram.tsx  PredictionPanel.tsx
models/: README.md  mnist-784-16-16-10.json
scripts/: setup-node.sh  setup-source.sh
sources/: README.md
tests/: test_data.py  test_export.py  test_model.py
tests/fixtures/: inference_case.json
training/: __init__.py  cli.py  config.py  data.py  export.py  model.py  train.py
