[project]
name = "mnist-network-demo"
version = "0.1.0"
description = "Treino e exportação da rede neural usada pela demo MNIST."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.2.6",
  "pillow==11.2.1",
  "torch==2.7.0",
  "torchvision==0.22.0",
  "typer==0.16.0",
]

[project.scripts]
mnist-demo = "training.cli:app"

[dependency-groups]
dev = [
  "pyright==1.1.401",
  "pytest==8.4.0",
  "pytest-cov==6.1.1",
  "ruff==0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["training"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
